--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=SpringBootMvc
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:file:/Users/Ishaan/Documents/springdb/testdb
+spring.datasource.username=root
+spring.datasource.password=root
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
